--- a/_includes/youtube.html
+++ b/_includes/youtube.html
@@ -1,1 +1,18 @@
-<iframe width="560" height="315" src="https://www.youtube.com/embed/youtube_id" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="video_wrapper">
+  <iframe src="https://www.youtube.com/embed/?rel=0&modestbranding=1&showinfo=0" frameborder="0" allowfullscreen></iframe>
+</div>
+
+.video_wrapper {
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 25px;
+	height: 0;
+}
+
+.video_wrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
