--- a/_sass/tale/_layout.scss
+++ b/_sass/tale/_layout.scss
@@ -90,3 +90,17 @@ footer {
     font-size: .8rem;
   }
 }
+.video_wrapper {
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 25px;
+	height: 0;
+}
+
+.video_wrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
