bug fixes: Fix label for newsletter subscription form

--- a/_includes/buttondown.html
+++ b/_includes/buttondown.html
@@ -5,7 +5,7 @@
   onsubmit="window.open('https://buttondown.com/bankole', 'popupwindow')"
   class="embeddable-buttondown-form"
 >
-  <label for="bd-email">newsletter</label>
+  <label for="bd-email">newsletter':'</label>
   <input type="email" name="email" id="bd-email" />
 
   <input type="submit" value="Subscribe" />
