--- a/_includes/youtube.html
+++ b/_includes/youtube.html
@@ -1,3 +1,6 @@
-<div class="video_wrapper">
-  <iframe src="https://www.youtube.com/embed/{{include.youtube_id}}?rel=0&modestbranding=1&showinfo=0" frameborder="0" allowfullscreen></iframe>
+<div class="video-container" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; margin: 2em auto;">
+  <iframe src="https://www.youtube.com/embed/{{include.youtube_id}}?rel=0&modestbranding=1&showinfo=0"
+          frameborder="0"
+          allowfullscreen
+          style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
 </div>
